--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,239 +1,299 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Arial;
-  }
-  
-  html,
-  body {
-    scroll-behavior: smooth;
-    height: 100vh;
-    width: 100%;
-  }
-  
-  nav {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-  }
-  
-  nav img {
-    width: 6rem;
-    padding-left: 0.5rem;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-  }
-  
-  nav ul li {
-    padding: 1rem;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: rgb(68, 105, 255);
-    font-weight: bold;
-    font-size: 1.2rem;
-    transition: 0.5s;
-  }
-  
-  nav ul li a:hover {
-    color: rgb(255, 68, 230);
-  }
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
 
-  section#message {
-    padding: 1.5rem;
-    background-color: rgb(197, 255, 214);
-    color: #004d04;
-    position: fixed;
-    top: 3rem;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    text-align: center;
-    font-size: 1.1rem;
-    font-weight: 600;
-  
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  span#close {
-    font-size: 2rem;
-    cursor: pointer;
-    transition: .3s;
-  }
-  
-  span#close:hover{
-    color: rgb(255, 0, 0);
-    transform: scale(1.5);
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(68, 105, 255);
-    padding: 6rem 3rem 3rem 3rem;
-  }
-  
-  header article h1 {
-    color: #fff;
-    font-size: 5rem;
-    padding: 0 4rem 2rem 4rem;
-  }
-  
-  header article p {
-    color: #fff;
-    font-size: 2rem;
-    padding-left: 4rem;
-  }
-  
-  header img {
-    width: 100%;
-    margin: 0 auto;
-  }
-  
-  section#cursos {
-    background-color: rgb(255, 68, 230);
-    padding: 3rem;
-    display: flex;
-    justify-content: center;
-  }
-  
-  section#cursos section.card {
-    background-color: #fff;
-    padding: 3rem;
-    border-radius: 1.5rem;
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-    position: relative;
-  }
-  
-  article#title {
-    width: 50%;
-  }
-  
-  article#title h2 {
-    padding: 1.5rem;
-  }
-  
-  article#content h3 {
-    font-size: 1.5rem;
-    padding: 3rem 3rem 1rem 3rem;
-  }
-  
-  article#content ul {
-    list-style: none;
-  }
-  
-  article#content ul li {
-    padding: 1rem 1rem 1rem 3rem;
-    font-size: 1.2rem;
-  }
-  
-  article#content a#inscrever {
-    padding: 1rem;
-    text-align: center;
-    text-decoration: none;
-    background-color: rgb(68, 105, 255);
-    color: #fff;
-    border-radius: 3rem;
-    border: 0.2rem solid rgb(255, 238, 0);
-    transition: 0.5s;
-    font-weight: bold;
-    position: absolute;
-    z-index: 10;
-    right: 10rem;
-    top: 32rem;
-  }
-  
-  article#content a#inscrever:hover {
-    background-color: #fff;
-    color: rgb(68, 105, 255);
-    border: 0.2rem solid rgb(68, 105, 255);
-  }
-  
-  section#inscrever {
-    background-color: rgb(177, 230, 255);
-    padding: 3rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  section#inscrever h2 {
-    color: rgb(0, 51, 255);
-    text-align: center;
-    padding-bottom: 3rem;
-    font-size: 2.5rem;
-    width: 100%;
-  }
-  
-  section#inscrever form {
-    width: 50%;
-  }
-  
-  section#inscrever form div input {
-    width: 100%;
-    padding: 1rem;
-    font-size: 1.3rem;
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
-    outline: none;
-    border: none;
-  }
-  
-  section#inscrever form div label {
-    font-size: 1.3rem;
-  }
-  
-  section#inscrever form button {
-    border: 1px solid #3359ec;
-    background-color: #fff;
-    color: #3359ec;
-    padding: 1rem;
-    font-size: 0.8vw;
-    font-weight: 600;
-    border-radius: 0.5rem;
+html, body {
+  height: 100vh;
+  width: 100%;
+  font-family: 'Trebuchet MS', sans-serif;
+}
+
+/* Nav Menu */
+
+nav {
+  display: flex;
+  align-items: left;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+
+nav .img {
+  display: flex;
+  height: 6rem;
+  padding-left: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+nav ul li {
+  padding: 1rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: rgb(40, 218, 141);
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: 0.5s;
+}
+
+nav ul li a:hover {
+  color: black;
+}
+
+button{
+  background-color: rgb(40, 218, 141); 
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition: transform 0.5s;
+}
+
+button:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+/* Index Page */
+
+.index {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 9rem 6rem 6rem 6rem;
+  text-align: left;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: .8em 1em .8em .8em;
+  height: 25em;
+  width: 15em;
+  margin-bottom: 1em;
+  border-radius: .3em;
+  box-shadow: rgba(0, 0, 0, 0.2) 3px 6px 10px;
+  transition: transform 0.5s;
+}
+
+.wrapper:hover{
+  transform: scale(1.1)
+}
+
+.index .wrapper .card_content {
+  display: flex;
+  flex-direction: row;
+  display: inline-block;
+  padding: 1rem;
+  border-radius: .3em;
+  justify-content: center;
+  align-items: center;
+  text-align: center; 
+}
+
+.index .wrapper .card_content .img {
+  height: 20em;
+  max-width: 15em;
+  border-radius: .3em;
+}
+
+.index .wrapper .card_content .name {
+  margin: 0;
+  font-size: 1em;
+  margin-top: 0.5rem;
+  border-radius: .3em;
+}
+
+.name{
+  color: #000000;
+}
+
+.index .wrapper .card_content .type {
+  font-size: .7em;
+  color: #222;
+  margin-top: 0.5rem;
+  border-radius: .3em;
+}
+
+@media (max-width: 820px) {
+  .container {
+    min-width: auto;
     display: block;
-    margin: auto;
-    margin-top: 2rem;
-    cursor: pointer;
-    transition: 0.3s ease-out;
-    width: 40%;
   }
-  
-  section#inscrever form button:hover {
-    background-color: #3359ec;
-    color: #fff;
-    transform: scale(1.1);
+  .card {
+    width: 100%;
   }
-  
-  footer {
-    padding: 3rem;
-    text-align: center;
+}
+
+@media (max-width: 480px) {
+  .card {
+    box-shadow: none;
   }
-  
-  footer p {
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
-  
-  footer p a {
-    text-decoration: none;
-    color: #3359ec;
-    transition: 0.5s;
-  }
-  
-  footer p a:hover {
-    color: rgb(255, 68, 230);
-  }
+}
+
+/* Details Page */
+
+.index-detalhes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 9rem 6rem 6rem 6rem;
+  text-align: left;
+}
+
+.wrapper-detalhes {
+  background: rgb(255, 255, 255);
+  padding: .6em 1em .6em .6em;
+  margin-bottom: 1em;
+  border-radius: .3em;
+  box-shadow: rgba(0, 0, 0, 0.2) 3px 6px 10px;
+  border: solid 5px rgb(40, 218, 141);
+}
+
+.index-detalhes .wrapper-detalhes .card_content-detalhes {
+  display: flex;
+  flex-direction: row;
+  display: inline-block;
+  padding: 1rem;
+  border-radius: .3em;
+  justify-content: center;
+  align-items: center;
+  text-align: center; 
+}
+
+/* Form Page */
+
+.main-class-cadastro {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 9rem 3rem 3rem 3rem;
+}
+
+.main-class-cadastro a {
+  display: flex;
+  text-align: center;
+  padding-bottom: 3rem;
+  font-size: 2.5rem;
+  width: 100%;
+  color: rgb(40, 218, 141);
+}
+
+.main-class-cadastro form {
+  max-width: 900px;
+  margin: auto;
+}
+
+.main-class-cadastro form section input {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.3rem;
+  text-align: center;
+  color: white;
+  text-decoration-color: white;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+  outline: none;
+  border-radius: 2rem;
+  border: 1px solid darkgoldenrod;
+  background: linear-gradient(to right, gold, darkorange);
+  box-shadow: 2px 0 0 5px rgb(0 0 0 / 20%);
+
+}
+.main-class-cadastro form section input::placeholder{
+  color:rgb(255, 255, 255);
+  text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
+}
+
+
+.main-class-cadastro form section label {
+  font-size: 1.3rem;
+}
+
+
+.main-class-cadastro form .button {
+margin-left: 3em;
+background: linear-gradient(to right, gold, darkorange);
+color: white;
+--width: 250px;
+--height: calc(var(--width) / 3);
+width: var(--width);
+height: var(--height);
+text-align: center;
+line-height: var(--height);
+font-size: calc(var(--height) / 4.5);
+font-family: Montserrat;
+letter-spacing: 0.2em;
+border: 1px solid darkgoldenrod;
+border-radius: 2em;
+transform: perspective(500px) rotateY(-15deg);
+text-shadow: 6px 3px 2px rgba(0, 0, 0, 0.2);
+box-shadow: 2px 0 0 5px rgba(0, 0, 0, 0.2);
+transition: 0.5s;
+position: relative;
+overflow: hidden;
+}
+
+.main-class-cadastro form .button:hover {
+transform: perspective(500px) rotateY(15deg);
+text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
+box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.main-class-cadastro form .button:before {
+content: '';
+position: absolute;
+width: 100%;
+height: 100%;
+background: linear-gradient(to right, transparent, white, transparent);
+left: -100%;
+transition: 0.5s;
+}
+
+.main-class-cadastro form .button:hover::before {
+left: 100%;}
+/* Confirmation Message */
+
+.message {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  background-color: rgb(255, 255, 255);
+  color: #004d04;
+  position: fixed;
+  bottom: 0rem;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  text-align: center;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.message .close {
+  font-size: 2rem;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.message .close:hover{
+  color: rgb(255, 0, 0);
+  transform: scale(1.5);
+}
+
