--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
         <link href="/img/site.ico" rel="icon" type="image/x-icon" />
-        <title>Movies</title>
+        <title>Movie Details</title>
     </head>
 
     <body>
@@ -22,26 +22,20 @@
             </ul>
         </nav>
 
-        <% if(message != "") {  %>
-            <section class="message">
-                <p><%= message %></p> <span class="close">&times;</span>
+        <main class="index-detalhes">
+            <section class="wrapper-detalhes">
+                <article class="card_content-detalhes">
+                    <img class="img" src="<%= filme.imagem %>">
+                    <p class="name"> Name: <%= filme.nome %></p>
+                    <p class="details"> details: <%= filme.descricao %></p>
+                    <div id="buttons">
+                        <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>                        
+                        <button>Delete</button>
+                    </div>
+                </article>
             </section>
-        <% }  %>
-
-        <main class="index">
-            <% filmes.forEach(movies => { %>
-                <a href="/details/<%= movies.id %>">
-                    <section class="wrapper">
-                            <article class="card_content">
-                                <img class="img" src="<%= movies.imagem %>">
-                                <p class="name"> <%= movies.nome %></p>
-                            </article>
-                    </section>
-                </a>
-            <% }) %>
         </main>
-            
+    
         <script src="/js/script.js"></script>
-        
     </body>
 </html>
