--- a/views/new.ejs
+++ b/views/new.ejs
@@ -23,17 +23,17 @@
             <form method="POST">
             
                 <section class="form-control">
-                    <label for="name">nome:</label>
+                    <label for="name">name:</label>
                     <input type="text" name="nome" id="name" placeholder="Movie Name" required>
                 </section>
 
                 <section class="form-control">
-                    <label for="description">descricao:</label>
+                    <label for="description">description:</label>
                     <input type="text" name="descricao" id="description" placeholder="Movie description" required>
                 </section>
 
                 <section class="form-control">
-                    <label for="poster">imagem:</label>
+                    <label for="poster">poster:</label>
                     <input type="text" name="imagem" id="poster" placeholder="Movie Poster" required>
                 </section>
 
