--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,6 +18,7 @@
                 </li>      
             </ul>
         </nav>
+
         <% if(message != "") {  %>
             <section class="message">
                 <p><%= message %></p> <span class="close">&times;</span>
@@ -29,17 +30,17 @@
             
                 <section class="form-control">
                     <label for="name">name:</label>
-                    <input type="text" name="nome" id="name" placeholder="Movie Name" required>
+                    <input type="text" name="nome" id="name" placeholder="Movie Name" >
                 </section>
 
                 <section class="form-control">
                     <label for="description">description:</label>
-                    <input type="text" name="descricao" id="description" placeholder="Movie description" required>
+                    <input type="text" name="descricao" id="description" placeholder="Movie description" >
                 </section>
 
                 <section class="form-control">
                     <label for="poster">poster:</label>
-                    <input type="text" name="imagem" id="poster" placeholder="Movie Poster" required>
+                    <input type="text" name="imagem" id="poster" placeholder="Movie Poster" >
                 </section>
 
                 <button type="submit" class="button">Add movie</button>
