--- a/views/details.ejs
+++ b/views/details.ejs
@@ -29,8 +29,16 @@
                     <p class="name"> Name: <%= filme.nome %></p>
                     <p class="details"> details: <%= filme.descricao %></p>
                     <div id="buttons">
-                        <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>                        
-                        <button>Delete</button>
+                        <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>   
+
+                        <!-- <section class="main-class-cadastro">
+                            <form method="POST">
+                
+                                <button type="submit" class="button">Delete Movie</button>
+                            </form>
+                        </section> -->
+                
+                        <button onclick="location.href='/delete/<%= filme.id %>'" type="button">Delete</button>
                     </div>
                 </article>
             </section>
