--- a/views/details.ejs
+++ b/views/details.ejs
@@ -31,14 +31,13 @@
                     <div id="buttons">
                         <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>   
 
-                        <!-- <section class="main-class-cadastro">
-                            <form method="POST">
-                
+                        <section class="main-class-cadastro">
+                            <form action="/delete/<%= filme.id %>" method="POST">
                                 <button type="submit" class="button">Delete Movie</button>
                             </form>
-                        </section> -->
+                        </section>
                 
-                        <button onclick="location.href='/delete/<%= filme.id %>'" type="button">Delete</button>
+                        <!-- <button onclick="location.href='/delete/<%= filme.id %>'" type="button">Delete</button> -->
                     </div>
                 </article>
             </section>
