--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 
         <% if(message != "") {  %>
             <section class="message">
-                <p><%= message %></p> <span class="close">&times;</span>
+                <p><%= message %></p> <span id="close">&times;</span>
             </section>
         <% }  %>
 
