--- a/views/details.ejs
+++ b/views/details.ejs
@@ -27,7 +27,7 @@
                 <article class="card_content-detalhes">
                     <img class="img" src="<%= filme.imagem %>">
                     <p class="name"> Name: <%= filme.nome %></p>
-                    <p class="details"> details: <%= filme.descricao %></p>
+                    <p class="details"> Details: <%= filme.descricao %></p>
                     <div id="buttons">
                         <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>   
 
