criação da pagina about

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
                 <li>
                     <a href="/new">New Movie</a>
                 </li>
+                <li>
+                    <a href="/about">About</a>
+                </li>
             </ul>
         </nav>
 
