--- a/views/new.ejs
+++ b/views/new.ejs
@@ -29,17 +29,17 @@
             <form method="POST">
             
                 <section class="form-control">
-                    <label for="name">name:</label>
+                    <label for="name">Name:</label>
                     <input type="text" name="nome" id="name" placeholder="Movie Name" >
                 </section>
 
                 <section class="form-control">
-                    <label for="description">description:</label>
+                    <label for="description">Description:</label>
                     <input type="text" name="descricao" id="description" placeholder="Movie description" >
                 </section>
 
                 <section class="form-control">
-                    <label for="poster">poster:</label>
+                    <label for="poster">Poster:</label>
                     <input type="text" name="imagem" id="poster" placeholder="Movie Poster" >
                 </section>
 
