--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,7 +164,11 @@ button:hover{
 }
 
 .wrapper-detalhes {
-  background: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  display: inline-block;
+  align-items: center;
+  background: white;
   padding: 1rem;
   margin-bottom: 1em;
   border-radius: .3em;
@@ -173,15 +177,41 @@ button:hover{
 }
 
 .index-detalhes .wrapper-detalhes .card_content-detalhes {
+  padding: 2rem;
+  border-radius: .3em;
+  text-align: left; 
+  font-size: x-large;
+}
+
+/* about page */
+
+.index-about {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 9rem 6rem 6rem 6rem;
+  text-align: left;
+}
+
+.wrapper-about {
   display: flex;
   flex-direction: row;
   display: inline-block;
-  padding: 1rem;
-  border-radius: .3em;
-  justify-content: center;
   align-items: center;
-  text-align: center; 
-  font-size: larger;
+  background: white;
+  padding: 1rem;
+  margin-bottom: 1em;
+  border-radius: .3em;
+  box-shadow: rgba(0, 0, 0, 0.2) 3px 6px 10px;
+  border: solid 5px rgb(255, 80, 125);
+  padding: 2rem;
+  border-radius: .3em;
+  text-align: left; 
+  font-size: x-large;
+}
+
+.imglogo {
+  height: 2rem;
 }
 
 /* Form Page */
@@ -211,28 +241,25 @@ button:hover{
   width: 100%;
   padding: 1rem;
   font-size: 1.3rem;
-  text-align: center;
+  text-align: left;
   color: white;
   text-decoration-color: white;
   margin-top: 1.5rem;
   margin-bottom: 2rem;
   outline: none;
   border-radius: 2rem;
-  border: 1px solid darkgoldenrod;
-  background: linear-gradient(to right, gold, darkorange);
-  box-shadow: 2px 0 0 5px rgb(0 0 0 / 20%);
-
+  border: 2px solid gold;
+  background-color: darkorange;
 }
+
 .main-class-cadastro form section input::placeholder{
   color:rgb(255, 255, 255);
   text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
-
 .main-class-cadastro form section label {
   font-size: 1.3rem;
 }
-
 
 .main-class-cadastro form .button {
 margin-left: 3em;
