--- a/views/details.ejs
+++ b/views/details.ejs
@@ -24,18 +24,18 @@
 
         <main class="index-detalhes">
             <section class="wrapper-detalhes">
+                <img class="img" src="<%= filme.imagem %>">
                 <article class="card_content-detalhes">
-                    <img class="img" src="<%= filme.imagem %>">
-                    <p class="name"> Name: <%= filme.nome %></p>
-                    <p class="details"> Details: <%= filme.descricao %></p>
+                    <div id="info">
+                        <p class="name"> Name: <%= filme.nome %></p>
+                        <p class="details"> Details: <%= filme.descricao %></p>    
+                    </div>
                     <div id="buttons">
                         <button onclick="location.href='/edit/<%= filme.id %>'" type="button">Edit</button>   
 
                         <form action="/delete/<%= filme.id %>" method="POST">
                             <button type="submit" class="button">Delete Movie</button>
                         </form>
-                
-                        <!-- <button onclick="location.href='/delete/<%= filme.id %>'" type="button">Delete</button> -->
                     </div>
                 </article>
             </section>
