--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -26,21 +26,21 @@
             <form method="POST">
             
                 <section class="form-control">
-                    <label for="name">nome:</label>
-                    <input type="text" name="nome" id="name" placeholder="<%= filme.nome %>" required>
+                    <label for="name">Name:</label>
+                    <input type="text" name="nome" id="name" value="<%= filme.nome %>" placeholder="Movie Name" required>
                 </section>
 
                 <section class="form-control">
-                    <label for="description">descricao:</label>
-                    <input type="text" name="descricao" id="description" placeholder="<%= filme.descricao %>" required>
+                    <label for="description">Description:</label>
+                    <input type="text" name="descricao" id="description" value="<%= filme.descricao %>" placeholder="Movie description" required>
                 </section>
 
                 <section class="form-control">
-                    <label for="poster">imagem:</label>
-                    <input type="text" name="imagem" id="poster" placeholder="<%= filme.imagem %>" required>
+                    <label for="poster">Image:</label>
+                    <input type="text" name="imagem" id="poster" value="<%= filme.imagem %>" placeholder="Movie Poster" required>
                 </section>
 
-                <button type="submit" class="button">Add movie</button>
+                <button type="submit" class="button">Edit movie</button>
             </form>
         </section>
 
