--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,7 +24,7 @@
 
         <main class="index-about">
             <article class="wrapper-about">
-                <img src="/public/img/Imagem1.png" height="200rem">
+                <img src="/img/Imagem1.png" height="200rem">
                 <p class="name"> Felipe Silva </p>
                 <p class="details"> </p>
 
@@ -35,7 +35,7 @@
             </article>
 
             <article class="wrapper-about">
-                <img src="/public/img/Imagem2.png" height="200rem">
+                <img src="/img/Imagem2.png" height="200rem">
                 <p class="name"> João Pedro </p>
                 <p class="details"> </p>
 
