--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,7 @@ nav .img {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   align-items: center;
 }
@@ -114,9 +115,7 @@ button:hover{
 }
 
 .index .wrapper .card_content .img {
-  height: 20em;
-  max-width: 15em;
-  border-radius: .3em;
+  max-height: 10em;
 }
 
 .index .wrapper .card_content .name {
