--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,9 +115,10 @@ button:hover{
 }
 
 .index .wrapper .card_content .img {
-  height: 20em;
-  max-width: 15em;
-  border-radius: .3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 20em;
 }
 
 .index .wrapper .card_content .name {
@@ -178,7 +179,10 @@ button:hover{
 }
 
 .wrapper-detalhes .img {
+  display: flex;
+  justify-content: center;
   max-height: 10em;
+  align-items: center;
 }
 
 .index-detalhes .wrapper-detalhes .card_content-detalhes {
