--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,7 +118,7 @@ button:hover{
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 50%;
+  max-height: 15em;
 }
 
 .index .wrapper .card_content .name {
